[package]
name = "vtf-tools"
version = "1.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vtf = "0.1.3"
image = "0.22.5"
base64 = "0.13.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0.126", features = ["derive"] }
